--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>The great serch for the fat rat</title>
     <script src="p5.min.js"></script>
     <script src="fatRat.js"></script>
-    <link rel="stylesheet" href="fatRat.css">
+    <link rel="stylesheet" href="fatRat.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>The great search for the fat rat</h1>
+    <div id="canvas"></div>
+  </body>
 </html>
