--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The great serch for the fat rat</title>
     <script src="p5.min.js"></script>
-    <script src="fatRat.js"></script>
+    <script src="fatRat.js" type="module"></script>
     <link rel="stylesheet" href="fatRat.css" />
   </head>
   <body>
